<resources>
    <string name="app_name">Cetus</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registro">Registro</string>
    <string name="Ingrese_Correo">Correo electrónico</string>
    <string name="Ingrese_contrasena">Contraseña</string>
    <string name="Perfil_usuario">Perfil de Usuario</string>
    <string name="Ingrese_nombre">Ingrese el nombre</string>
    <string name="Ingrese_email">Ingrese el correo</string>
    <string name="Ingrese_telefono">Ingrese número del móvil</string>
    <string name="Registrar">Registrar</string>
    <string name="Bienvenida">Bienvenido</string>
    <string name="Eventos">Gestionar eventos</string>
    <string name="Actualizar">Actualizar Datos</string>
    <string name="Salir">Cerrar Sesion</string>
    <string name="RegisterUser">Registro</string>
    <string name="UserProfile">Perfil</string>
    <string name="AssistantsActivity">Asistentes</string>
    <string name="EventsActivity">Eventos</string>
    <string name="RegisterAssistant">Registro de asistente</string>
    <string name="RegisterEvent">Registro de eventos</string>
    <string name="UpdateProfile">Actualizar Información</string>
    <string name="ActualizarInformacion">Actualizar</string>
    <string name="CrearEvento">Crear nuevo evento</string>
    <string name="Ingrese_fecha">Ingrese la fecha</string>
    <string name="Ingrese_ubicacion">Ingrese la ubicación</string>
    <string name="AddEvent">Crear Evento</string>
    <string name="Asistentes">Gestionar Asistentes</string>
    <string name="scan">Escanear Documento</string>
    <string name="IngreseTipoDocumento">Ingrese tipo documento</string>
    <string name="IngreseNumeroDocumento">Ingrese número Documento</string>
    <string name="IngreseLocalizacion">Ingrese ubicación</string>
    <string name="requerido">Valor Requerido</string>
    <string name="emailInUse">Correo en uso</string>
    <string name="successfully">Registro Exitoso</string>
    <string name="failed">Error inicio de sesion</string>
    <string name="problem">Problema en el registro</string>
    <string name="serverError">Error Servidor</string>
</resources>
