<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UpdateUserActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Actualizar"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:textColor="@color/primary_text"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="144dp"
        android:layout_height="134dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/updateuser" />

    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:onClick="goToProfileActivity"
        android:text="@string/ActualizarInformacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_txt_phone"
        android:backgroundTint="@color/primary_light"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/update_user_txt_name"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Ingrese_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/colorAccent"
        android:textColorHint="@color/secondary_text"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/update_user_txt_email"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Ingrese_Correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_txt_name"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/colorAccent"
        android:textColorHint="@color/secondary_text"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/update_user_txt_pass"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Ingrese_contrasena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_txt_email"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/colorAccent"
        android:textColorHint="@color/secondary_text"
        android:textColor="@color/primary_text"/>

    <EditText
        android:id="@+id/update_user_txt_phone"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Ingrese_telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_user_txt_pass"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="@color/colorAccent"
        android:textColorHint="@color/secondary_text"
        android:textColor="@color/primary_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>